# pic2webp

./: .gitignore  LICENSE  README.md  findings.md  generate-icons.cjs  logo-preview-new.html  logo-preview.html  package-lock.json  package.json  progress.md  task_plan.md
.github/workflows/: build.yml
mac/: .gitignore  LICENSE  Package.swift  README.md
mac/Sources/Pic2WebP/: ContentView.swift  Pic2WebPApp.swift
mac/Sources/Pic2WebP/Assets.xcassets/AppIcon.appiconset/: AppIcon.icns  Contents.json
mac/scripts/: make-app.sh  make-dmg.sh
scripts/: build-and-sign.sh  build.md
src/: app.js  i18n.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tauri/: README.md  package-lock.json  package.json  vite.config.ts
tauri/scripts/: build.md  download-tools.ps1  fix-gatekeeper.command
tauri/src/: app.js  index.html  style.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: lib.rs  main.rs
tools/: README.md
